--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>首页</h1>
+    <h3><a href="./html/goods-list.html">商品列表</a></h3>
 </body>
 </html>
