--- a/html/goods-list.html
+++ b/html/goods-list.html
@@ -32,7 +32,7 @@
         </tbody>
     </table>
 
-
+    <button><a href="./../index.html">返回首页</a></button>
 </body>
 </html>
 <script src="../controller/goods-list.js"></script>
