--- a/html/goods-list.html
+++ b/html/goods-list.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../js/angular.js"></script>
-    <script src="../js/angular-route.js"></script>
+    <script src="../lib/angular/angular.js"></script>
+    <script src="../lib/angular/angular-route.js"></script>
 </head>
 <body ng-app="myApp" ng-controller="listContrl">
 
